; ModuleID = '/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_file_open.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_file_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lfs2_file_config = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"lfs2_file_open(%p, %p, \22%s\22, %x)\00", align 1
@lfs2_file_open.defaults = internal constant %struct.lfs2_file_config zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"lfs2_file_open -> %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lfs2_file_open(i32* %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = bitcast i32* %10 to i8*
  %12 = ptrtoint i8* %11 to i32
  %13 = load i32*, i32** %6, align 8
  %14 = bitcast i32* %13 to i8*
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 (i8*, i32, ...) @LFS2_TRACE(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %12, i8* %14, i8* %15, i32 %16)
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @lfs2_file_opencfg(i32* %18, i32* %19, i8* %20, i32 %21, %struct.lfs2_file_config* @lfs2_file_open.defaults)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = call i32 (i8*, i32, ...) @LFS2_TRACE(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* %9, align 4
  ret i32 %25
}

declare dso_local i32 @LFS2_TRACE(i8*, i32, ...) #1

declare dso_local i32 @lfs2_file_opencfg(i32*, i32*, i8*, i32, %struct.lfs2_file_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
